# Chatbot-PDF

./: README.md  app.py  main.py  pyproject.toml  rag.py
chroma_langchain_db/: chroma.sqlite3
chromadb/: chroma.sqlite3
